# YiMo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: build-binaries-nuitka.yml  build-binaries.yml  release.yml
scripts/nuitka/: build.py
scripts/pyinstaller/: build_onefile.py
src/mkdocs_translate/: __init__.py  app.py
src/mkdocs_translate/core/: processor.py  translator.py
src/mkdocs_translate/gui/: main_window.py
src/mkdocs_translate/gui/widgets/: provider_manager_dialog.py  settings_dialog.py  task_list.py
src/mkdocs_translate/models/: config.py  task.py
src/mkdocs_translate/utils/: file_utils.py  yaml_utils.py
src/yimo/: __init__.py  app.py
src/yimo/core/: processor.py  translator.py
src/yimo/core/engines/: base.py  raw_markdown.py  structured_graph.py
src/yimo/core/llm/: schema.py  tokens.py
src/yimo/core/markdown/: front_matter.py  segmenter.py
src/yimo/gui/: icon.py  main_window.py  style.py
src/yimo/gui/styles/: light.qss
src/yimo/gui/widgets/: file_selector.py  progress_panel.py  provider_manager_dialog.py  settings_dialog.py  task_list.py
src/yimo/i18n/: __init__.py  manager.py
src/yimo/i18n/locales/: en.py  zh_CN.py
src/yimo/icons/: icon.icns
src/yimo/models/: config.py  task.py
src/yimo/utils/: constants.py  file_utils.py  rate_limiter.py
tests/: test_core.py  test_front_matter_toml.py  test_i18n.py  test_markdown_extensions_blocks.py  test_project_state_languages.py  test_prompt_placeholders.py  test_structured_markdown.py  test_translator_prompt_selection.py
