[project]
name = "mkdocs-translate"
version = "0.1.0"
description = "A GUI tool for translating MkDocs documentation using OpenAI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
mkdocs-translate = "mkdocs_translate.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_translate"]
