[project]
name = "yimo"
version = "0.1.0"
description = "YiMo（译墨）- A GUI tool for translating documentation with LLM providers"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["translation", "markdown", "pyside6", "gui", "llm"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Repository = "https://github.com/BakaDream/YiMo"
Issues = "https://github.com/BakaDream/YiMo/issues"

[project.scripts]
yimo = "yimo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yimo"]

[tool.hatch.build.targets.wheel.force-include]
"src/yimo/gui/styles/light.qss" = "yimo/gui/styles/light.qss"
"src/yimo/gui/styles/chevron-down.svg" = "yimo/gui/styles/chevron-down.svg"
"src/yimo/icons/icon.png" = "yimo/icons/icon.png"
"src/yimo/icons/icon.ico" = "yimo/icons/icon.ico"
"src/yimo/icons/icon.icns" = "yimo/icons/icon.icns"
"src/yimo/icons/icon.svg" = "yimo/icons/icon.svg"
"src/yimo/icons/favicon.ico" = "yimo/icons/favicon.ico"
"src/yimo/icons/none-background.svg" = "yimo/icons/none-background.svg"
